--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
+body{
+  background-color: #7c00ee;
+  color: aliceblue;
+  font-family: roboto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card{
+  color: black;
+  width: 120%;
+  font-size: 1rem;
+}
+.cardtitle{
+  font-size: 1.6rem;
+  color: #9d27f2;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.buttonW{
+  width: "100px" !important;
+  height: "30px" !important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+input {
+  background-color: none;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
